--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
   "author": "Ilya Sarkisov",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^18.6.3",
+    "@types/validator": "^13.15.2",
     "@typescript-eslint/eslint-plugin": "^8.38.0",
     "eslint": "^8.57.1",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -25,7 +28,13 @@
   },
   "dependencies": {
     "@typescript-eslint/parser": "^8.38.0",
+    "bcrypt": "^6.0.0",
     "express": "^4.18.1",
-    "mongoose": "^6.5.0"
+    "express-winston": "^4.2.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^6.5.0",
+    "validator": "^13.15.15",
+    "winston": "^3.17.0",
+    "zod": "^3.22.4"
   }
 }
